# py-aiger-dfa

./: .drone.yml  CHANGELOG.md  README.md  pyproject.toml
aiger_dfa/: __init__.py  aig2dfa.py  dfa2aig.py  test_aig2dfa.py  test_dfa2aig.py  test_to_dfa.py  to_dfa.py  utils.py
docs/: aig2dfa.html  dfa2aig.html  equiv.html  index.html  test_aig2dfa.html  test_dfa2aig.html  utils.html
