[tool.poetry]
name = "py-aiger-dfa"
version = "0.4.4"
description = "Library for moving between sequential circuits AIGs and DFAs."
authors = ["Marcell Vazquez-Chanlatte <mvc@linux.com>"]
repository = "https://github.com/mvcisback/py-aiger-dfa"
readme="README.md"
license = "MIT"
packages = [
    { include = "aiger_dfa" },
]

[tool.poetry.dependencies]
python = "^3.9"
attrs = ">=22"
bidict = "^0.22.0"
funcy = "^1.12"
dfa = "^4"
py-aiger = "^6.0.0"
py-aiger-bv = "^4.7.6"
py-aiger-ptltl = "^3.0.0"
pyrsistent = "^0.19"


[tool.poetry.dev-dependencies]
pytest-cov = "^2.7"
pytest-flake8 = "^1.0"
pytest-xdist = "^2.0.0"
parsimonious = "^0.10.0"
coverage = "^5.0.0"
pdoc3 = "^0.9.0"


[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver2"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
